Releasing new package

--- a/doc/guides/02.Usage.md.hbs
+++ b/doc/guides/02.Usage.md.hbs
@@ -4,3 +4,9 @@ Usage
 ```javascript
 {{{read 'example/example-usage.js'}}}
 ```
+
+
+**jp.realglobe.shiba.daemon.util.example01**
+```bash
+{{{read 'example/jp.realglobe.shiba.daemon.util.example01'}}}
+```
